--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
-    "react-native-tab-navigator": "^0.3.4"
+    "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-scrollable-tab-view": "^0.9.0",
+    "react-native-tab-navigator": "^0.3.4",
+    "react-navigation": "^2.18.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
