--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prop-types": "^15.6.2",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
+    "react-native-check-box": "^2.1.6",
     "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-easy-toast": "^1.1.0",
     "react-native-scrollable-tab-view": "^0.9.0",
     "react-native-tab-navigator": "^0.3.4",
     "react-navigation": "^2.18.1"
